# 814-2-rl

./: CMakeLists.txt  README.md
Includes/core/Game/: Board.hpp
Includes/py/Game/: Board.hpp
Sources/core/: CMakeLists.txt
Sources/core/Game/: Board.cc
Sources/py/: CMakeLists.txt  main.cc
Sources/py/Game/: Board.cc
